<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AjoutActivity">

        <EditText
            android:id="@+id/txtTitre"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:hint="@string/titre"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/txtAuteur"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="25dp"
            android:ems="10"
            android:hint="@string/auteur"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/txtAnnee"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="25dp"
            android:ems="10"
            android:hint="@string/annee_edition"
            android:inputType="number"
            android:minHeight="48dp"
            android:singleLine="true"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/txtResume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginBottom="25dp"
            android:hint="@string/resume"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/txtComment"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="25dp"
            android:ems="10"
            android:hint="@string/mes_commentaires"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/txtDateAjout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="25dp"
            android:ems="10"
            android:hint="@string/date_de_lecture"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnAjout"
                    android:layout_width="313dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="79dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="onAjouter"
                    android:text="@string/ajouter"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.544"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.16" />
        </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>